--- a/getting_help_in_R.html
+++ b/getting_help_in_R.html
@@ -17,22 +17,37 @@
   </head>
   <body>
     <textarea id="source">
-class: center, middle, inverse, title-slide
 
-# Getting help with R
-## R Ladies Coventry
-### Ella Kaye
-### October 29th, 2020
+
+
+
+
+
+
+
+
+class: inverse, left, middle
+
+# GETTING HELP IN R
+
+Ella Kaye | Rladies Coventry | October 29th, 2020
 
 ---
 
+# Me and R
 
+- Studying for a PhD in Statistics at the University of Warwick
 
+- Getting into R:
 
-
-
-
-
+  - 2014: first R course as part of Statistics MSc 
+  - 2015: first taste of `ggplot2` 
+  - 2016: first R package 
+  - 2017: first community involvement (useR!2017, [Oxford R User Group](https://r-oxford.github.io), [rainbowR](https://rainbowr.slack.com), [@R_LGBTQ](https://twitter.com/R_LGBTQ))
+  - 2020: first [TidyTuesday](https://github.com/rfordatascience/tidytuesday) contribution
+  - 2021: first ...
+  
+---
 
 # Overview
 
@@ -45,7 +60,7 @@ class: center, middle, inverse, title-slide
 - Reproducible examples and `reprex` package
 - Where to ask
   
-### Further resources
+### Resources
 
 ---
 
@@ -144,7 +159,9 @@ background-size: contain
 ---
 # Searching online
 
-- In Google, include "r" and package name in your search
+- In Google, include "r" and package name in your search and avoid extra words
+
+  - Check how recent the result is
 
 - Use [rseek.org](https://rseek.org) to search R documentation, discussion forums, blogs
 
@@ -156,7 +173,9 @@ background-size: contain
 
 - Use tags in [StackOverflow](https://stackoverflow.com)
 
-    - rotate x axis labels [ggplot2] [r]
+  - Check a few answers, read comments
+  - Reputation (e.g. number of up-votes) can be a good guide
+    
 
 ---
 
@@ -178,7 +197,7 @@ background-size: contain
   
   - Search for the package on GitHub
   - Download package source from CRAN (.tar.gz file)
-  - `function_name`
+  - `function_name` to see source code (no brackets)
   - Can you identify exactly what's causing the problem?
 
 ---
@@ -351,7 +370,7 @@ class: inverse, middle, center
 
 - R [mailing lists](https://www.r-project.org/mail.html): 5 main and 22 special interest
 
-- Google groups: [ggplot2](https://groups.google.com/forum/#!forum/ggplot2) and [manipulatr](https://groups.google.com/forum/#!forum/manipulatr) for tidyverse data manipulation queries
+- Google groups: e.g. [ggplot2](https://groups.google.com/forum/#!forum/ggplot2) and [manipulatr](https://groups.google.com/forum/#!forum/manipulatr) for tidyverse data manipulation queries
 
 - Twitter [\#rstats](https://twitter.com/hashtag/rstats)
   
@@ -382,7 +401,7 @@ class: center, middle
 
 class: center, middle
 
-# [vignette example](https://github.com/rstudio/rmarkdown/issues/1119)
+# [Fonts example](https://stackoverflow.com/questions/63357522/purchased-font-in-hugo-academic-not-showing-on-all-modern-browsers-computers)
 
 
 ---
@@ -391,13 +410,17 @@ class: center, middle
 
 - Answer questions on StackOverflow [[r]](https://stackoverflow.com/questions/tagged/r) and twitter ([#rstats](https://twitter.com/hashtag/rstats))
 
-- File issues
+- File issues on GitHub
+
+- Engage in community forums
+
+- Become a mentor in the R for Data Science [community](https://www.rfordatasci.com).
 
 ---
 
 class: inverse, center, middle
 
-# FURTHER RESOURCES
+# RESOURCES
 
 ---
 
@@ -459,7 +482,7 @@ class: inverse, center, middle
   
 ---
 
-class: inverse, center, middle
+class: inverse, left, middle
 
 # Thank you!
 ## Any questions?
