--- a/getting_help_in_R.html
+++ b/getting_help_in_R.html
@@ -13,24 +13,34 @@
     <link href="libs/xaringanExtra-clipboard/xaringanExtra-clipboard.css" rel="stylesheet" />
     <script src="libs/xaringanExtra-clipboard/xaringanExtra-clipboard.js"></script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
+    <link href="libs/font-awesome/css/fontawesome-all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
+    <link rel="stylesheet" href="extra.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
 
 
+&lt;!-- layout: true --&gt;
+&lt;!-- &lt;div class="my-footer"&gt;&lt;span&gt;bit.ly/LINK • @ellamkaye&lt;/span&gt;&lt;/div&gt;  --&gt;
 
 
 
 
 
 
+
+
+&lt;!-- layout: true --&gt;
+&lt;!-- &lt;div class="my-footer"&gt;&lt;span&gt;bit.ly/LINK • @nj_tierney&lt;/span&gt;&lt;/div&gt;  --&gt;
+
+---
 
 class: inverse, left, middle
 
 # GETTING HELP IN R
 
-Ella Kaye | Rladies Coventry | October 29th, 2020
+.large[Ella Kaye | Rladies Coventry | October 29th, 2020]
 
 ---
 
@@ -261,7 +271,7 @@ class: middle, center
 ---
 
 
-# **reproducible**
+# reproducible
 
   - You need to capture everything
 
@@ -270,7 +280,7 @@ class: middle, center
 
 ---
 
-# **minimal**
+# minimal
 
   - Strip away everything that is not directly related to your problem. 
   
@@ -283,7 +293,7 @@ class: middle, center
   
 ---
 
-# **verifiable**
+# verifiable
 
   - Actually reproduces the problem!
 
@@ -482,25 +492,27 @@ class: inverse, center, middle
   
 ---
 
-class: inverse, left, middle
+class: left, middle
 
 # Thank you!
 ## Any questions?
 
 
 ## I'd love to hear from you!
-[E.Kaye.1@warwick.ac.uk](mailto:E.Kaye.1@warwick.ac.uk)
+.large[
+<i class="fas  fa-paper-plane "></i> [E.Kaye.1@warwick.ac.uk](mailto:E.Kaye.1@warwick.ac.uk)
 
-[@ellamkaye](https://twitter.com/ellamkaye)
+<i class="fab  fa-twitter "></i> [@ellamkaye](https://twitter.com/ellamkaye)
 
-[ellakaye.rbind.io](https://ellakaye.rbind.io)
+<i class="fas  fa-laptop "></i> [ellakaye.rbind.io](https://ellakaye.rbind.io)
 
-[github.com/EllaKaye](https://github.com/ellakaye)
+<i class="fab  fa-github "></i> [github.com/EllaKaye](https://github.com/ellakaye)
+]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
-"highlightStyle": "solarized-dark",
+"highlightStyle": "solarized-light",
 "highlightLines": true,
 "countIncrementalSlides": false
 });
