--- a/getting_help_in_R.html
+++ b/getting_help_in_R.html
@@ -40,7 +40,7 @@ class: inverse, left, middle
 
 # GETTING HELP IN R
 
-.large[Ella Kaye | Rladies Coventry | October 29th, 2020]
+.bit-large[Ella Kaye | Rladies Coventry | October 29th, 2020]
 
 ---
 
@@ -305,7 +305,7 @@ class: middle, center
 
 ---
 
-class: inverse, center, middle
+class: inverse, center, middle, special-bold
   
 # Can be a lot of effort, but often the process of coming up with a good **repr**oducible **ex**ample (**reprex**) allows you to identify (and possibly solve) the problem
 
@@ -369,7 +369,7 @@ class: inverse, middle, center
 
 ---
 
-# Where to ask **question** or **debate** questions
+## Where to ask **question** or **debate** questions
   
 - [RStudio community](https://community.rstudio.com) or [rOpenSci’s discussion forum](https://discuss.ropensci.org) (see above),
 
@@ -492,14 +492,15 @@ class: inverse, center, middle
   
 ---
 
-class: left, middle
+class: left, end
 
-# Thank you!
+.right[# Thank you!
 ## Any questions?
+### &lt;span style="color:#FDFCFA"&gt;Blank line&lt;/span&gt;]
 
-
-## I'd love to hear from you!
 .large[
+<i class="fas  fa-link "></i> [bit.ly/emk-getting-help-R](http://bit.ly/emk-getting-help-R)
+
 <i class="fas  fa-paper-plane "></i> [E.Kaye.1@warwick.ac.uk](mailto:E.Kaye.1@warwick.ac.uk)
 
 <i class="fab  fa-twitter "></i> [@ellamkaye](https://twitter.com/ellamkaye)
