update bitly link

--- a/getting_help_in_R.html
+++ b/getting_help_in_R.html
@@ -499,7 +499,7 @@ class: left, end
 ### &lt;span style="color:#FDFCFA"&gt;Blank line&lt;/span&gt;]
 
 .large[
-<i class="fas  fa-link "></i> [bit.ly/emk-getting-help-R](http://bit.ly/emk-getting-help-R)
+<i class="fas  fa-link "></i> [bit.ly/emk-getting-help-in-R](http://bit.ly/emk-getting-help-in-R)
 
 <i class="fas  fa-paper-plane "></i> [E.Kaye.1@warwick.ac.uk](mailto:E.Kaye.1@warwick.ac.uk)
 
