--- a/getting_help_in_R.html
+++ b/getting_help_in_R.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Getting help with R</title>
+    <title>Getting help in R</title>
     <meta charset="utf-8" />
     <meta name="author" content="Ella Kaye" />
     <script src="libs/header-attrs/header-attrs.js"></script>
