change 'icon' to 'favicon' by knitting

--- a/getting_help_in_R.html
+++ b/getting_help_in_R.html
@@ -14,8 +14,8 @@
     <script src="libs/xaringanExtra-clipboard/xaringanExtra-clipboard.js"></script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <link href="libs/font-awesome/css/fontawesome-all.min.css" rel="stylesheet" />
-    <link rel="icon" href="icon.png" type="image/png"> 
-    <link rel="shortcut icon" href="icon.png" type="image/png"> 
+    <link rel="icon" href="favicon.png" type="image/png"> 
+    <link rel="shortcut icon" href="favicon.png" type="image/png"> 
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
     <link rel="stylesheet" href="extra.css" type="text/css" />
   </head>
