Change meta link to slides rather than talk page

--- a/getting_help_in_R.html
+++ b/getting_help_in_R.html
@@ -12,7 +12,7 @@
     <meta name="github-repo" content="ellakaye/Rladies-Coventry-getting-help-in-R"/>
     <meta name="twitter:title" content="Getting Help in R"/>
     <meta name="twitter:description" content="A guide to getting help in R, both searching for answers and how and where to ask good questions."/>
-    <meta name="twitter:url" content="https://ellakaye.rbind.io/talk/2020-10-20-rladies-coventry-getting-help/"/>
+    <meta name="twitter:url" content="https://ellakaye.github.io/Rladies-Coventry-getting-help-in-R/getting_help_in_R.html#1"/>
     <meta name="twitter:image:src" content="https://github.com/EllaKaye/Rladies-Coventry-getting-help-in-R/blob/main/logo.svg"/>
     <meta name="twitter:image:alt" content="Ella Kaye logo"/>
     <meta name="twitter:card" content="summary_large_image"/>
@@ -20,7 +20,7 @@
     <meta name="twitter:site" content="@ellamkaye"/>
     <meta property="og:title" content="Getting Help in R"/>
     <meta property="og:description" content="A guide to getting help in R, both searching for answers and how and where to ask good questions."/>
-    <meta property="og:url" content="https://ellakaye.rbind.io/talk/2020-10-20-rladies-coventry-getting-help/"/>
+    <meta property="og:url" content="https://ellakaye.github.io/Rladies-Coventry-getting-help-in-R/getting_help_in_R.html#1"/>
     <meta property="og:image" content="https://github.com/EllaKaye/Rladies-Coventry-getting-help-in-R/blob/main/logo.svg"/>
     <meta property="og:image:alt" content="Ella Kaye logo"/>
     <meta property="og:type" content="website"/>
