Add cover slide image to meta

--- a/getting_help_in_R.html
+++ b/getting_help_in_R.html
@@ -13,7 +13,7 @@
     <meta name="twitter:title" content="Getting Help in R"/>
     <meta name="twitter:description" content="A guide to getting help in R, both searching for answers and how and where to ask good questions."/>
     <meta name="twitter:url" content="https://ellakaye.github.io/Rladies-Coventry-getting-help-in-R/getting_help_in_R.html#1"/>
-    <meta name="twitter:image:src" content="https://github.com/EllaKaye/Rladies-Coventry-getting-help-in-R/blob/main/logo.svg"/>
+    <meta name="twitter:image:src" content="https://github.com/EllaKaye/Rladies-Coventry-getting-help-in-R/blob/main/help-cover-slide.png"/>
     <meta name="twitter:image:alt" content="Ella Kaye logo"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:creator" content="@ellamkaye"/>
@@ -21,7 +21,7 @@
     <meta property="og:title" content="Getting Help in R"/>
     <meta property="og:description" content="A guide to getting help in R, both searching for answers and how and where to ask good questions."/>
     <meta property="og:url" content="https://ellakaye.github.io/Rladies-Coventry-getting-help-in-R/getting_help_in_R.html#1"/>
-    <meta property="og:image" content="https://github.com/EllaKaye/Rladies-Coventry-getting-help-in-R/blob/main/logo.svg"/>
+    <meta property="og:image" content="https://github.com/EllaKaye/Rladies-Coventry-getting-help-in-R/blob/main/help-cover-slide.png"/>
     <meta property="og:image:alt" content="Ella Kaye logo"/>
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_US"/>
